# 7_set

./: CMakeLists.txt  main.cpp  set.h
src/: set.cpp  set.h
tests/: ts1.cpp
